test/users/thom/class-override.good
class-override.chpl:13: error: field 'a' has same name as parent class field
class-override.chpl:3: note: parent class field declared here
